Fixed response template

--- a/actions/collect-report/config.json
+++ b/actions/collect-report/config.json
@@ -2,5 +2,6 @@
   "exportId" : "hy0gPD6HQeGFBGH4EX2P9Q",
   "name" : "collect-report",
   "forcePrivateResponse" : false,
+  "canBeMemoized" : false,
   "isDataType" : false
 }
