--- a/actions/entrypoint/config.json
+++ b/actions/entrypoint/config.json
@@ -2,5 +2,6 @@
   "exportId" : "SkFgKph2SQOzc0dK2HE7RQ",
   "name" : "entrypoint",
   "forcePrivateResponse" : false,
+  "canBeMemoized" : false,
   "isDataType" : false
 }
