--- a/actions/reports-collected/config.json
+++ b/actions/reports-collected/config.json
@@ -2,5 +2,6 @@
   "exportId" : "r3Cp3wcdT1-9_9TWhZd5Eg",
   "name" : "reports-collected",
   "forcePrivateResponse" : false,
+  "canBeMemoized" : false,
   "isDataType" : false
 }
