--- a/actions/setup/config.json
+++ b/actions/setup/config.json
@@ -2,5 +2,6 @@
   "exportId" : "heR3MX0WSgO5cMk1rXkCmw",
   "name" : "setup",
   "forcePrivateResponse" : false,
+  "canBeMemoized" : false,
   "isDataType" : false
 }
